# writer-fine-tuning

./: .gitignore  Makefile  README.md  pyproject.toml  📖はじめに.py
output/sk-1yPL/シャべマル2件とideaPotの記事を学習/: model_name.txt  output_0_0.txt  output_0_1.txt  output_0_2.txt  output_0_3.txt  output_0_4.txt  output_0_5.txt  output_0_6.txt  output_1_0.txt  output_1_1.txt  output_1_2.txt  output_1_3.txt  output_2_0.txt  output_2_1.txt  output_2_2.txt  output_2_3.txt  output_2_4.txt  output_2_5.txt  output_2_6.txt  summary_output_0_0.txt  summary_output_0_1.txt  summary_output_0_2.txt  summary_output_0_3.txt  summary_output_0_4.txt  summary_output_0_5.txt  summary_output_0_6.txt  summary_output_1_0.txt  summary_output_1_1.txt  summary_output_1_2.txt  summary_output_1_3.txt  summary_output_2_0.txt  summary_output_2_1.txt  summary_output_2_2.txt  summary_output_2_3.txt  summary_output_2_4.txt  summary_output_2_5.txt  summary_output_2_6.txt
pages/: 00_💸ふぁいんちゅーにんぐ.py  01_✍️つかってみる.py
